Override for tsoa decorators
