# lib/endpoints/ServiceEndpoints.ts
@@ -1,5 +1,3 @@
-import { Get, Route, SuccessResponse, Path, Response, Security } from 'tsoa'
-import { ValidateError } from '../model/ValidateError'
 import * as os from 'os'
 
 /**
@@ -7,18 +5,13 @@ import * as os from 'os'
  * This class is used to define your endpoint business logic, and will often
  * be 1-1 mapping on the related Controller class.
  */
-@Route('api')
 export class ServiceEndpoints {
-  public static route = '/api'
   /**
    * A Simple Echo endpoint that echoes the passed in string on the path
    * @param text The supplied input to Echo
    * @returns Echo
    */
-  @Get('echo/{text}')
-  @SuccessResponse('200', 'OK')
-  @Response<ValidateError>(422, "Validation Failed")
-  public async getEcho (@Path() text: string) {
+  public async getEcho (text: string) {
     return text
   }
 
@@ -26,15 +19,10 @@ export class ServiceEndpoints {
    * A simple Ping message to determine if the API is available and receiving requests
    * @returns Pong
    */
-  @Get('ping')
-  @SuccessResponse('200', 'OK')
   public async getPing () {
     return 'Pong'
   }
 
-  @Get('healthCheck')
-  @SuccessResponse('200', 'OK')
-  @Security('BearerAuth')
   public async getHealth () {
     return {
       status: 'Running',
