# lib/public/swagger.json
@@ -42,7 +42,7 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
-		"/api/echo/{text}": {
+		"/api/echo/{echo}": {
 			"get": {
 				"operationId": "GetEcho",
 				"responses": {
@@ -71,9 +71,16 @@
 				"security": [],
 				"parameters": [
 					{
-						"description": "The supplied input to Echo",
 						"in": "path",
-						"name": "text",
+						"name": "echo",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "echoQuery",
 						"required": true,
 						"schema": {
 							"type": "string"
